--- a/Traversal-Liberty/assets/css/style-liberty.css
+++ b/Traversal-Liberty/assets/css/style-liberty.css
@@ -15611,7 +15611,7 @@ a.hnys-title {
 
 /*--/w3l-bottom--*/
 .w3l-bottom {
-  background: url(../images/banner3.jpg) no-repeat center;
+  background: url(../images/banner5.png) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 0;
@@ -16221,7 +16221,7 @@ a.read span {
 /*--/breadcrumb--*/
 .w3l-about-breadcrumb {
   margin-top: 90px;
-  background: url(../images/banner3.jpg) no-repeat center;
+  background: url(../images/banner5.png) no-repeat center;
   background-size: cover;
   position: relative;
   z-index: 0;
